--- a/faszienballset.html
+++ b/faszienballset.html
@@ -71,51 +71,48 @@
                     <div class="container-product container-product-small">
                         <img class="image-product image-product-small" src="./media/ball1.jpg" alt="Italian Trulli">
                         <div class="product-info product-info-right">
-                            <div class="info-container">
-                                <div class="info-title info-title-list">Duo-Ball (Peanut Ball)</div>
-                                <ul class="info-list">
-                                    <li>14cm Durchmesser</li>
-                                    <li>Material: Silikone/Kunststoff</li>
-                                    <li>für einseitiges Rollen</li>
-                                    <li>sehr effizient für den gesamten Wirbelsäulenbereich (Lendenwirbelbereich, Brustwirbelbereich, Halswirbelbereich)</li>
-                                    <li>sehr effizient für den Nacken und entlang der Gliedmaßen</li>
-                                </ul>
-                            </div>
+                            <div class="info-container"></div>
+                            <div class="info-title info-title-list">Duo-Ball (Peanut Ball)</div>
+                            <ul class="info-list">
+                                <li>14cm Durchmesser</li>
+                                <li>Material: Silikone/Kunststoff</li>
+                                <li>für einseitiges Rollen</li>
+                                <li>sehr effizient für den gesamten Wirbelsäulenbereich (Lendenwirbelbereich, Brustwirbelbereich, Halswirbelbereich)</li>
+                                <li>sehr effizient für den Nacken und entlang der Gliedmaßen</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="container-product container-product-small">
                         <div class="product-info">
-                            <div class="info-container">
-                                <div class="info-title info-title-list">Einzel-Ball (Lacrosse Ball)</div>
-                                <ul class="info-list">
-                                    <li>6,3cm Durchmesser</li>
-                                    <li>Material: Silikone/Kunststoff</li>
-                                    <li>für flächiges Rollen</li>
-                                    <li>optimal für die Fußsohlenmassage (Plantarfaszie)</li>
-                                    <li>Ferse, Wade, Oberschenkel, Gesäß, Hüfte und Becken</li>
-                                    <li>Rippenbogen, Brust, Schulter</li>
-                                    <li>Oberarm und Elbogen, Unterarm und Handgelenk, Handballen</li>
-                                    <li>Gesicht, Schläfe und Kiefer</li>
-                                </ul>
-                            </div>
+                            <div class="info-container"></div>
+                            <div class="info-title info-title-list">Einzel-Ball (Lacrosse Ball)</div>
+                            <ul class="info-list">
+                                <li>6,3cm Durchmesser</li>
+                                <li>Material: Silikone/Kunststoff</li>
+                                <li>für flächiges Rollen</li>
+                                <li>optimal für die Fußsohlenmassage (Plantarfaszie)</li>
+                                <li>Ferse, Wade, Oberschenkel, Gesäß, Hüfte und Becken</li>
+                                <li>Rippenbogen, Brust, Schulter</li>
+                                <li>Oberarm und Elbogen, Unterarm und Handgelenk, Handballen</li>
+                                <li>Gesicht, Schläfe und Kiefer</li>
+                            </ul>
                         </div>
                         <img class="image-product image-product-small-right" src="./media/ball2.jpg" alt="Italian Trulli">
                     </div>
                     <div class="container-product container-product-small">
                         <img class="image-product image-product-small" src="./media/ball3.jpg" alt="Italian Trulli">
                         <div class="product-info product-info-right">
-                            <div class="info-container">
-                                <div class="info-title info-title-list">Igel-Ball (Spiky Ball)</div>
-                                <ul class="info-list">
-                                    <li>9cm Durchmesser</li>
-                                    <li>Material: Kunststoff</li>
-                                    <li>für kreisendes Rollen</li>
-                                    <li>zur Anwendung für den ganzen Körper (optimal für die Selbstmassage)</li>
-                                    <li>Stimulation von Muskeln und Reflexzonen (z.B. Fußreflexzonenmassage)</li>
-                                    <li>eine trockene Haut sorgt für mehr Halt</li>
-                                    <li>perfekt zur Kräftigung und Entspannung verkrampfter Handmuskulatur durch kreisende druckvolle Bewegungen beider Hände über den Ball</li>
-                                </ul>
-                            </div>
+                            <div class="info-container"></div>
+                            <div class="info-title info-title-list">Igel-Ball (Spiky Ball)</div>
+                            <ul class="info-list">
+                                <li>9cm Durchmesser</li>
+                                <li>Material: Kunststoff</li>
+                                <li>für kreisendes Rollen</li>
+                                <li>zur Anwendung für den ganzen Körper (optimal für die Selbstmassage)</li>
+                                <li>Stimulation von Muskeln und Reflexzonen (z.B. Fußreflexzonenmassage)</li>
+                                <li>eine trockene Haut sorgt für mehr Halt</li>
+                                <li>perfekt zur Kräftigung und Entspannung verkrampfter Handmuskulatur durch kreisende druckvolle Bewegungen beider Hände über den Ball</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="container-product container-product-amazon">
