--- a/korkset.html
+++ b/korkset.html
@@ -71,50 +71,45 @@
                 <div class="container-product container-product-small">
                     <img class="image-product image-product-small" src="./media/korkset4.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-container">
-                            <div class="info-title">FLEXIBILITÄT &amp; MOBILITÄT</div>
-                            <div class="info-subtitle">Das Yoga Kork Rad</div>
-                            <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit.</div>
-                        </div>
+                        <div class="info-container"></div>
+                        <div class="info-title">FLEXIBILITÄT &amp; MOBILITÄT</div>
+                        <div class="info-subtitle">Das Yoga Kork Rad</div>
+                        <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit.</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
                     <div class="product-info">
-                        <div class="info-container">
-                            <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
-                            <div class="info-subtitle">Der Yoga Kork Block</div>
-                            <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
-                        </div>
+                        <div class="info-container"></div>
+                        <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
+                        <div class="info-subtitle">Der Yoga Kork Block</div>
+                        <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
                     </div>
                     <img class="image-product image-product-small-right" src="./media/korkset5.jpg" alt="Italian Trulli">
                 </div>
                 <div class="container-product container-product-small">
                     <img class="image-product image-product-small" src="./media/korkset3.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-container">
-                            <div class="info-title">VORBEREITUNG &amp; REGENERATION</div>
-                            <div class="info-subtitle">Die Yoga Kork Rolle</div>
-                            <div class="info-text">Die Faszien rücken immer mehr in den Vordergrund. Als bindegewebiges Netzwerk durchziehen sie den gesamten Körper und umhüllen dabei unsere Muskeln und Organe, wodurch sie die einzelnen Strukturen innerhalb unseres Körpers voneinander abgrenzen und verbinden. Sie verleihem unserem Körper Form, Stabilität und Flexibilität.</div>
-                        </div>
+                        <div class="info-container"></div>
+                        <div class="info-title">VORBEREITUNG &amp; REGENERATION</div>
+                        <div class="info-subtitle">Die Yoga Kork Rolle</div>
+                        <div class="info-text">Die Faszien rücken immer mehr in den Vordergrund. Als bindegewebiges Netzwerk durchziehen sie den gesamten Körper und umhüllen dabei unsere Muskeln und Organe, wodurch sie die einzelnen Strukturen innerhalb unseres Körpers voneinander abgrenzen und verbinden. Sie verleihem unserem Körper Form, Stabilität und Flexibilität.</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
                     <div class="product-info">
-                        <div class="info-container">
-                            <div class="info-title">ENTSPANNUNG &amp; DURCHBLUTUNG</div>
-                            <div class="info-subtitle">Die Yoga Kork Bälle</div>
-                            <div class="info-text">Im Unterschied zur Korkrolle, ist mit den Korkbällen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert.</div>
-                        </div>
+                        <div class="info-container"></div>
+                        <div class="info-title">ENTSPANNUNG &amp; DURCHBLUTUNG</div>
+                        <div class="info-subtitle">Die Yoga Kork Bälle</div>
+                        <div class="info-text">Im Unterschied zur Korkrolle, ist mit den Korkbällen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert.</div>
                     </div>
                     <img class="image-product image-product-small-right" src="./media/korkset6.jpg" alt="Italian Trulli">
                 </div>
                 <div class="container-product container-product-small">
                     <img class="image-product image-product-small" src="./media/cork.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-container">
-                            <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
-                            <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
-                        </div>
+                        <div class="info-container"></div>
+                        <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
+                        <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
                     </div>
                 </div>
                 <div class="container-product container-product-amazon">
