--- a/korkblock.html
+++ b/korkblock.html
@@ -71,19 +71,17 @@
                 <div class="container-product container-product-small">
                     <img class="image-product image-product-small" src="./media/korkset8.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-container">
-                            <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
-                            <div class="info-subtitle">Der Yoga Kork Block</div>
-                            <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
-                        </div>
+                        <div class="info-container"></div>
+                        <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
+                        <div class="info-subtitle">Der Yoga Kork Block</div>
+                        <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
                         <div class="product-info">
-                            <div class="info-container">
-                                <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
-                                <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
-                            </div>
+                            <div class="info-container"></div>
+                            <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
+                            <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
                         </div>
                         <img class="image-product image-product-small-right" src="./media/cork.jpg" alt="Italian Trulli">
                     </div>
