--- a/faszienballset.html
+++ b/faszienballset.html
@@ -9,7 +9,7 @@
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
             <title>Contenance.</title>
-            <link href="style4.css" rel="stylesheet" />
+            <link href="style.css" rel="stylesheet" />
             <link href="style-product.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
