--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,7 @@
             <meta name="theme-color" content="#ffffff">
             <title>Contenance.</title>
             <link href="style.css" rel="stylesheet" />
-            <link href="style-product.css" rel="stylesheet" />
+            <link href="impressum.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -56,35 +56,7 @@
         </div>
         <div id="container-content">
             <div id="content">
-                <div class="title-product">YOGA KORK BLOCK</div>
-                <div class="container-product container-product-amazon">
-                    <img class="image-product" src="./media/korkset7.jpg" alt="Italian Trulli">
-                    <div class="product-info product-info-amazon">       
-                        <div class="info-title">Contenance.® Yoga Block aus Naturkork – robust &amp; rutschfest – für Stabilität &amp; Gleichgewicht.</div>
-                        <div class="info-subtitle">EUR 14,95</div>
-                        <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Yoga-Block-Naturkork-Gleichgewicht/dp/B088Q2WXS9/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-3">
-                            <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                            <div class="buy-amazon">Jetzt Kaufen</div>
-                        </a>
-                    </div>
-                </div>
-                <div class="container-product container-product-small">
-                    <img class="image-product image-product-small" src="./media/korkset8.jpg" alt="Italian Trulli">
-                    <div class="product-info product-info-right">
-                        <div class="info-container"></div>
-                        <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
-                        <div class="info-subtitle">Der Yoga Kork Block</div>
-                        <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
-                    </div>
-                </div>
-                <div class="container-product container-product-small">
-                        <div class="product-info">
-                            <div class="info-container"></div>
-                            <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
-                            <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
-                        </div>
-                        <img class="image-product image-product-small-right" src="./media/cork.jpg" alt="Italian Trulli">
-                    </div>
+                <div class="page-title">KONTAKT</div>
             </div>
         </div>
         <div id = "footer-container">
@@ -95,11 +67,11 @@
                 </div>
                 <div class="footer-colomn">
                     <div class="footer-title">INFO</div>
-                    <a class="link link-footer">Kontakt</a>
-                    <a class="link link-footer">Support</a>
-                    <a class="link link-footer">AGB's</a>
-                    <a class="link link-footer">Impressum</a>
-                    <a class="link link-footer">Datenschutzerklärung</a>
+                     <a href="./kontakt.html" class="link link-footer">Kontakt</a>
+                    <a href="./support.html" class="link link-footer">Support</a>
+                    <a href="./agbs.html" class="link link-footer">AGB's</a>
+                    <a href= "./impressum.html" class="link link-footer">Impressum</a>
+                    <a href="./datenschutz.html" class="link link-footer">Datenschutzerklärung</a>
                 </div>
                 <div class="footer-colomn">
                     <div class="footer-title">MEDIA</div>
