--- a/korkset.html
+++ b/korkset.html
@@ -45,7 +45,7 @@
             <div id="menu">
                 <a id="link-behind" class="link" href="./behind.html">CONTENANCE.</a>
                 <div class="dropdown">
-                    <a id="link-products" class="dropbtn link">OUR PRODUCTS<i class="arrow"></i></a>
+                    <a id="link-products" class="dropbtn link">PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
                         <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
                         <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
@@ -138,10 +138,10 @@
                     <a class="link link-footer">Datenschutzerklärung</a>
                 </div>
                 <div class="footer-colomn">
-                    <div class="footer-title">SOCIALMEDIA</div>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
-                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
-                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
+                    <div class="footer-title">MEDIA</div>
+                    <a class="link link-social" href="https://www.instagram.com/contenance.berlin/"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
+                    <a class="link link-social" href="https://www.facebook.com/Contenanceberlin-100837051783248"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
+                    <a class="link link-social" href="https://www.amazon.de/stores/Contenance.%C2%AE/page/11DB4512-9DC8-4FE3-BF88-96723A65AE3B?ref_=ast_bln"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
                 </div>
             </div>
         </div>
