--- a/agbs.html
+++ b/agbs.html
@@ -45,7 +45,7 @@
             <div id="menu">
                 <a id="link-behind" class="link" href="./behind.html">CONTENANCE.</a>
                 <div class="dropdown">
-                    <a id="link-products" class="dropbtn link">OUR PRODUCTS<i class="arrow"></i></a>
+                    <a id="link-products" class="dropbtn link">PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
                         <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
                         <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
