--- a/faszienballset.html
+++ b/faszienballset.html
@@ -133,11 +133,11 @@
                 </div>
                 <div class="footer-colomn">
                     <div class="footer-title">INFO</div>
-                    <a class="link link-footer">Kontakt</a>
-                    <a class="link link-footer">Support</a>
-                    <a class="link link-footer">AGB's</a>
-                    <a class="link link-footer">Impressum</a>
-                    <a class="link link-footer">Datenschutzerklärung</a>
+                    <a href="./kontakt.html" class="link link-footer">Kontakt</a>
+                    <a href="./support.html" class="link link-footer">Support</a>
+                    <a href="./agbs.html" class="link link-footer">AGB's</a>
+                    <a href= "./impressum.html" class="link link-footer">Impressum</a>
+                    <a href="./datenschutz.html" class="link link-footer">Datenschutzerklärung</a>
                 </div>
                 <div class="footer-colomn">
                     <div class="footer-title">MEDIA</div>
