--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="footer-colomn">
                     <div class="footer-title">MEDIA</div>
-                    <a class="link link-social" href="https://www.instagram.com/contenance.berlin/"><img class="image-social" src="./media/instagram.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
+                    <a class="link link-social" href="https://www.instagram.com/contenance.berlin/"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
                     <a class="link link-social" href="https://www.facebook.com/Contenanceberlin-100837051783248"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
                     <a class="link link-social" href="https://www.amazon.de/stores/Contenance.%C2%AE/page/11DB4512-9DC8-4FE3-BF88-96723A65AE3B?ref_=ast_bln"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
                 </div>
