--- a/contenance.html
+++ b/contenance.html
@@ -54,7 +54,8 @@
                 </div>
             </div>
         </div>
-
+        
+        <div class = "container-contenance">
         <div id="parallax1" class="parallax"></div>
         <div class="parallax-text-container">
             <div class="parallax-text">The word "Contenance" means self-control. In Latin „Continentia“ is a derivation of the verb continēre, which means “to hold together and keep under control.</div>
@@ -68,6 +69,7 @@
             <div class="parallax-text">Standing up for others and defending their rights comes naturally to you. You have the freedom to do as you please and achieve what you want to achieve. Nothing stops you from accomplishing anything that you set your mind on, your pursuits will end up successfully, and you will experience the rewards of your hard work.</div>
         </div>
         <div id="parallax4" class="parallax"></div>
+        </div>
            
         <div id = "footer-container">
             <div id = "footer">
