--- a/korksetnew.html
+++ b/korksetnew.html
@@ -61,11 +61,7 @@
                     <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-amazon">        
                             <div class="info-title">Contenance.® Faszien Yoga Set – robust &amp; rutschfest – Rolle, Bälle, Rad und Block aus Naturkork.</div>
-                            <div class="info-subtitle">EUR 49,95</div>
-                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
-                                <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                <div class="buy-amazon">Jetzt Kaufen</div>
-                            </a>
+                            <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit.</div>        
                     </div>
                 </div>
                 <div class="container-product container-product-small">
