--- a/korksetnew.html
+++ b/korksetnew.html
@@ -61,7 +61,13 @@
                     <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-amazon">        
                             <div class="info-title">Contenance.® Faszien Yoga Set – robust &amp; rutschfest – Rolle, Bälle, Rad und Block aus Naturkork.</div>
-                            <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit.</div>        
+                            <ul class="info-list">
+                                    <li>OPTIMALE SET-KOMBINATION</li>
+                                    <li>IN GYMS &amp; STUDIOS BELIEBT</li>
+                                    <li>ROBUST &amp; RUTSCHFEST</li>
+                                    <li>UMWELTFREUNDLICH &amp; NACHHALTIG</li>
+                                    <li>PREMIUM QUALITÄT</li>
+                                </ul>        
                     </div>
                 </div>
                 <div class="container-product container-product-small">
