--- a/korksetnew.html
+++ b/korksetnew.html
@@ -62,11 +62,11 @@
                     <div class="product-info product-info-amazon">        
                             <div class="info-title">Contenance.® Faszien Yoga Set – robust &amp; rutschfest – Rolle, Bälle, Rad und Block aus Naturkork.</div>
                             <ul class="info-list">
-                                    <li>OPTIMALE SET-KOMBINATION</li>
-                                    <li>IN GYMS &amp; STUDIOS BELIEBT</li>
-                                    <li>ROBUST &amp; RUTSCHFEST</li>
-                                    <li>UMWELTFREUNDLICH &amp; NACHHALTIG</li>
-                                    <li>PREMIUM QUALITÄT</li>
+                                    <li>OPTIMALE SET-KOMBINATION – Ob als Stütze bei Balance-Übungen, als Unterlage für den Rücken, zum Ausrollen der Muskelfaszien oder als nützliches Hilfsmittel beim Erlernen neuer Yoga Übungen: Dieses optimal abgestimmte Set ist grundsätzlich das ideale Yoga-Zubehör für jeden Beginner und Fortgeschrittenen</li>
+                                    <li>IN GYMS &amp; STUDIOS BELIEBT – Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</li>
+                                    <li>ROBUST &amp; RUTSCHFEST – Kork enthält eine natürliche wachsartige Substanz, die kein Wasser oder Gas absorbiert, und damit sowohl seine Verrottung verhindert, als auch bei Feuchtigkeit für festen Grip sorgt. Wenn Kork warm oder feucht wird, nehmen seine taktilen Eigenschaften zu. Genießen Sie das wertvolle Gefühl von Naturkork: Latex-frei, Plastik-frei und 100% natürlich!</li>
+                                    <li>UMWELTFREUNDLICH &amp; NACHHALTIG – Keine Bäume werden gefällt! Kork ist ein natürlich nachwachsender Rohstoff, der aus der regenerativen Rinde der Korkeiche gewonnen wird und keinerlei negative Auswirkung auf das Ökosystem hat: So können Korkeichen bis zu 4 Mal mehr Kork produzieren und das klimaschädliche CO2 binden – eine große Unterstützung der Artenvielfalt in Waldlebensräumen. Es gibt kein vergleichbares Material mit solch einzigartigen Eigenschaften und Besonderheiten!</li>
+                                    <li>PREMIUM QUALITÄT – Dank professioneller deutscher Produktentwicklung und hoher Qualitätsstandards ist das Kork-Yoga Set ein absoluter Spitzenreiter in Sachen Hochwertigkeit, Gesundheit und Umweltbewusstsein. Ein sehr aufwendiges Verfahren der Korkstoffgewinnung und eine maßgetreue Formgebung mit Hochdruckpresse und Schleifwerk, bringen ein besonders hautfreundliches und nachhaltiges Produkt hervor – ausgestattet mit selbst-reinigenden Eigenschaften und einer langen Haltbarkeitsdauer.</li>
                                 </ul>        
                     </div>
                 </div>
